EI-1235: Migrate to shared IerDashboardMetadataDTO from insight-common-model (#16301)
Co-authored-by: Claude Opus 4.7 <noreply@anthropic.com>